// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.accounting;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.accounting.posting.grpc";
option java_outer_classname = "AccountingPostingProto";
option objc_class_prefix = "GDA";

import "gedit/common.proto";
import "gedit/accounting/accounting_event.proto";

// The bonus service definition.
//https://accountingexplained.com/financial/cycle/
//https://medium.com/@RobertKhou/double-entry-accounting-in-a-relational-database-2b7838a5d7f8
service AccountingPostingApi {

    rpc GetPosting (GetPostingRequest) returns (PostingResponse) {
    }

    rpc ListPosting (ListPostingRequest) returns (stream PostingResponse) {
    }


    rpc ListMyPosting (ListMyPostingRequest) returns (stream PostingResponse) {
    }

}
message ListPostingRequest {
    string userUuid = 11;
    //accountUuid+journalUuid unique
    string accountUuid = 12; //optional
    string journalUuid = 13; //optional

    int32 from = 100;
    int32 size = 101;

}


message ListMyPostingRequest {
    string accountUuid = 12; //optional
    int64 lastUpdated = 13;

    int32 from = 100;
    int32 size = 101;

}

message GetPostingRequest {
    string uuid = 1;
}

message PostingResponse {
    Status status = 999;
    Posting posting = 1;
}

message Posting {
    string uuid = 1;

    string userUuid = 11;
    //accountUuid+journalUuid unique
    string accountUuid = 12;
    string journalUuid = 13;

    int32 amount = 14;
    int64 created = 15;
    string comment = 16;
}
